--- a/style.css
+++ b/style.css
@@ -66,3 +66,24 @@ footer {
   height: 50px;
   background-color: #AAAAAA;
 }
+
+@media screen and (max-width: 768px) {
+  header {
+    width: 100%;
+  }
+
+  main {
+    width: 100%;
+    display: block;
+  }
+
+  .step-box {
+    width: 90%;
+    margin: 0 auto 20px;
+
+  }
+
+  .step-box:last-child {
+    margin: 0 auto;
+  }
+}  
